# Vixely

./: .dockerignore  .editorconfig  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
api/: .env.dev  Dockerfile  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json  mago.toml
api/frankenphp/: Caddyfile
docs/: adsense-integration.md  deployment.md
docs/mediabunny/: llms-full.txt  llms.txt
docs/plans/: 2026-02-25-vixely-ui-ux-performance-compliance-design.md  2026-02-25-vixely-ui-ux-performance-compliance-implementation-plan.md  2026-02-25-wave1-baseline-report.md  2026-02-26-editor-tabs-unification-design.md  2026-02-26-editor-tabs-unification.md  2026-02-26-editor-ui-ux-redesign-design.md  2026-02-26-editor-ui-ux-redesign-implementation-plan.md  2026-02-26-editor-ui-ux-redesign-validation-report.md
public/: robots.txt  sitemap.xml
scripts/: build-wasm.sh  copy-jassub.sh  generate-route-tree.mjs
src/: main.tsx  styles.css
src/components/: AdContainer.tsx  AdSlot.tsx  ConfirmResetModal.tsx  CookieBanner.tsx  FileMetadataModal.tsx  PrivacyModal.tsx  Seo.tsx
src/config/: codecs.ts  editorUx.ts  monetag.ts  presets.ts
src/hooks/: useAdBlockDetector.ts  useEditorLayoutPrefs.ts  useFrameStepController.ts  useImageProcessor.ts  usePanZoom.ts  (+9 more)
vixely-core/: Cargo.toml
vixely-core/src/: common.rs  gif.rs  lib.rs
vixely-core/src/video/: matroska.rs  mod.rs  mp4.rs
web/: .oxlintrc.json  package.json
(+170 files in other folders)
